      [ticket:597], and are constructed with a thunk instead
- orm
    - forwards-compatibility with 0.4: added one(), first(), and 
      all() to Query
    - added synchronization to the mapper() construction step, to avoid
      thread collections when pre-existing mappers are compiling in a 
      different thread [ticket:613]
    - fixed very stupid bug when deleting items with many-to-many
      uselist=False relations
    - remember all that stuff about polymorphic_union ?  for 
      joined table inheritance ?  Funny thing...
      You sort of don't need it for joined table inheritance, you 
      can just string all the tables together via outerjoin().
      The UNION still applies if concrete tables are involved, 
      though (since nothing to join them on).
    - small fix to eager loading to better work with eager loads
      to polymorphic mappers that are using a straight "outerjoin"
      clause
    - fix to the "column_prefix" flag so that the mapper does not 
      trip over synonyms (and others) that are named after the column's actual
      "key" (since, column_prefix means "dont use the key").
- sql
    - MetaData and all SchemaItems are safe to use with pickle.  slow
      table reflections can be dumped into a pickled file to be reused later.
      Just reconnect the engine to the metadata after unpickling. [ticket:619]
    - added a mutex to QueuePool's "overflow" calculation to prevent a race 
      condition that can bypass max_overflow
    - fixed grouping of compound selects to give correct results. will break
      on sqlite in some cases, but those cases were producing incorrect
      results anyway, sqlite doesn't support grouped compound selects
      [ticket:623]
    - fixed precedence of operators so that parenthesis are correctly applied
      [ticket:620]
    - calling <column>.in_() (i.e. with no arguments) will return 
      "CASE WHEN (<column> IS NULL) THEN NULL ELSE 0 END = 1)", so that 